2004-07-19  Martin Hunt  <hunt@redhat.com>
	* All: Updated load_lib calls to find new location
	of insight-support.exp.

--- a/gdb/testsuite/gdb.gdbtk/ChangeLog
+++ b/gdb/testsuite/gdb.gdbtk/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-19  Martin Hunt  <hunt@redhat.com>
+
+	* All: Updated load_lib calls to find new location
+	of insight-support.exp.
+
 2004-07-16  Andrew Cagney  <cagney@redhat.com>
 
 	* insight-support.exp: Moved to here from ../lib.
