--- a/winsup/mingw/ChangeLog
+++ b/winsup/mingw/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-19  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* include/time.h (__time64_t): Add missing ';'. 
+
 2004-07-17  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* include/time.h (wcsftime): Move out of !__STRICT_ANSI
