--- a/winsup/cygserver/ChangeLog
+++ b/winsup/cygserver/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-20  Corinna Vinschen  <corinna@vinschen.de>
+
+	* bsd_helper.cc: Whitespace fixes.
+	* bsd_mutex.cc: Ditto.
+
 2004-07-19  Corinna Vinschen  <corinna@vinschen.de>
 
 	* transport.cc (transport_layer_base::~transport_layer_base): Remove.
