--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-21  Andrew Cagney  <cagney@gnu.org>
+
+	* PROBLEMS: Mention breakpoints/1702.
+	* NEWS: For signal trampolines, cite s390 GNU/Linux as a system
+	that is known to work.
+
 2004-07-18  Andrew Cagney  <cagney@gnu.org>
 
 	* version.in: Bump to version 6.1.91.
