--- a/winsup/cygwin/ChangeLog
+++ b/winsup/cygwin/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-22  Christopher Faylor  <cgf@timesys.com>
+
+	* pinfo.cc (pinfo::init): Print handle in hex when MapViewOfFile fails.
+
 2004-07-20  Corinna Vinschen  <corinna@vinschen.de>
 
 	* shm.cc: Whitespace fixes.
