--- a/winsup/cygwin/ChangeLog
+++ b/winsup/cygwin/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-22  Corinna Vinschen  <corinna@vinschen.de>
+
+	* fhandler_tty.cc (fhandler_tty_slave::open): Use requested flag
+	values also when copying fhandler from archetype.
+
 2004-07-22  Christopher Faylor  <cgf@timesys.com>
 
 	* pinfo.cc (pinfo::init): Print handle in hex when MapViewOfFile fails.
