--- a/winsup/cygwin/ChangeLog
+++ b/winsup/cygwin/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-23  Corinna Vinschen  <corinna@vinschen.de>
+
+	* dtable.cc (dtable::get_debugger_info): Make stderr r/w according
+	to SUSv3.
+
 2004-07-22  Corinna Vinschen  <corinna@vinschen.de>
 
 	* fhandler_tty.cc (fhandler_tty_slave::open): Use requested flag
