--- a/rda/ChangeLog
+++ b/rda/ChangeLog
@@ -1,9 +1,12 @@
+2004-07-23  Michael Snyder  <msnyder@redhat.com>
+
+	* MAINTAINERS: Remove Andrew Cagney, at his request.
+
 2004-07-09  Michael Snyder  <msnyder@redhat.com>
 
 	* samples/demo-target.c (demo_set_thread_mem): Allocate new 
 	simulated memory in hunks, rather than one byte at a time.
 	If target_mem.base moves down, copy contents up.
-
 
 	* samples/demo-target.c (demo_target): Call malloc only once,
 	so that gdb can detach and re-attach repeatedly.
