--- a/newlib/ChangeLog
+++ b/newlib/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-29  Jeff Johnston  <jjohnstn@redhat.com>
+
+	* libc/time/strptime.c: Correct full-name of "March" typo.
+
 2004-07-16  Anil Paranjpe  <anilp1@kpitcummins.com>
 
 	* configure.host (h8300*-*-*): Default long long printing support. 
