--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-29  Andrew Cagney  <cagney@gnu.org>
+
+	* PROBLEMS (mips-irix): Note that it is broken.
+
 2004-07-28  Andrew Cagney  <cagney@gnu.org>
 
 	* version.in: Bump to version 6.1.92.
