--- a/winsup/mingw/ChangeLog
+++ b/winsup/mingw/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-30  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* include/string.h: Revert 2004-07-26 additions of
+	__ATTRIBUTE_PURE.
+
 2004-07-28  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* mingwex/math/powl.c (powl): Revert change of 2004-02-01.
