--- a/utils/spu/ChangeLog
+++ b/utils/spu/ChangeLog
@@ -1,3 +1,10 @@
+2004-08-05  Nathanael Nerode  <neroden@gcc.gnu.org>
+
+	* configure.in: Convert to autoconf 2.59, rename to...
+	* configure.ac: ...this.
+	* Makefile.in: Update to match.
+	* configure: Regenerate.
+
 2002-04-02  Daniel Jacobowitz  <drow@mvista.com>
 
 	From Nathanael Nerode <neroden@doctormoo.dyndns.org>:
