--- a/sid/component/ChangeLog
+++ b/sid/component/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-06  Frank Ch. Eigler  <fche@redhat.com>
+
+	* CATALOG: Add hw-glue-pin-pacer component.
+
 2003-10-24  Dave Brolley  <brolley@redhat.com>
 
 	* configure.in: Set program_transform_name to s,x,x, to avoid
