--- a/winsup/mingw/ChangeLog
+++ b/winsup/mingw/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-07  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* include/string.h (memchr, memcmp, strchr, strcmp, strcspn)
+	(strlen, strncmp, strpbrk, strrchr, strspn, strstr): Add pure
+        attribute.
+
 2004-07-30  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* include/dirent.h (struct _wdirent): Remove obsolete comment.
