--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,10 @@
+2004-08-07  Andrew Cagney  <cagney@gnu.org>
+
+	* doublest.c: Update copyright.
+	(floatformat_from_length): Call error when floatformat is NULL.
+	(extract_floating_by_length): Remove NULL fmt check.
+	(store_floating_by_length): Ditto.
+
 2004-07-29  Andrew Cagney  <cagney@gnu.org>
 
 	* version.in: Bump to version 6.2.
