--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,5 +1,7 @@
 2004-08-07  Andrew Cagney  <cagney@gnu.org>
 
+	* doublest.c (floatformat_from_length): Fix tipo, "*" not "&".
+
 	* doublest.c: Update copyright.
 	(floatformat_from_length): Call error when floatformat is NULL.
 	(extract_floating_by_length): Remove NULL fmt check.
