(utils) 	* Remove misc/doschk -- users should get it from upstream at 	ftp.gnu.org/pub/non-gnu/doschk/doschk-1.1.tar.gz. 	* Remove misc directory, which contains nothing else.
(utils/wince)
	* Makefile.in: Delete Makefile in 'distclean'; fixes PR gdb/920.
	Remove dead code.
	* configure.in: Update to autoconf 2.59, rename to...
	* configure.ac: ...this.
	* configure: Regenerate.

--- a/utils/ChangeLog
+++ b/utils/ChangeLog
@@ -1,5 +1,9 @@
 2004-08-05  Nathanael Nerode  <neroden@gcc.gnu.org>
 
+	* Remove misc/doschk -- users should get it from upstream at
+	ftp.gnu.org/pub/non-gnu/doschk/doschk-1.1.tar.gz.
+	* Remove misc directory, which contains nothing else.
+
 	* Remove sparclite subdirectory -- it is obsolete.
 	* configure.in, Makefile.def: Remove references thereto.
 	* configure, Makefile.in: Regenerate.
