--- a/winsup/cygwin/ChangeLog
+++ b/winsup/cygwin/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-10  Christopher Faylor  <cgf@redhat.com>
+
+	* select.cc (select_stuff::wait): Correctly check for w4 array bounds.
+
 2004-08-03  Corinna Vinschen  <corinna@vinschen.de>
 
 	* errno.cc (errmap): Add ERROR_TOO_MANY_LINKS -> EMLINK mapping.
