--- a/sid/component/gdb/ChangeLog
+++ b/sid/component/gdb/ChangeLog
@@ -1,3 +1,11 @@
+2004-08-11  Dave Brolley  <brolley@redhat.com>
+
+	* gdb.cxx (read_bus_word): Handle bus::misaligned. Return type now
+	'void' again.
+	(write_bus_word): Ditto.
+	(process_get_mem): Don't handle bus::misaligned here.
+	(process_set_mem): Ditto.
+
 2004-07-01  Dave Brolley  <brolley@redhat.com>
 
 	* gdb.cxx (read_bus_word): Now returns bus::status. Return status
