--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-12  Andrew Cagney  <cagney@gnu.org>
+
+	* NEWS: Mention fixes in GDB 6.2.1.
+	* PROBLEMS: Remove mention of mips-irix.
+
 2004-08-08  Mark Kettenis  <kettenis@gnu.org>
 
 	* vax-tdep.c (vax_frame_this_id): Use frame_func_unwind instead of
