--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,14 @@
+2004-08-13  Mark Kettenis  <kettenis@gnu.org>
+
+	* i386-tdep.c (I386_MAX_INSN_LEN): New define.
+	(struct i386_insn): New structure.
+	(i386_match_insn): New function.
+	(i386_frame_setup_skip_insns): New variable.
+	(i386_analyze_frame_setup): Change to use i386_match_insn and the
+	array i386_frame_setup_insns of instructions that should be
+	skipped inside the frame setup sequence.
+	* NEWS: Mention improved i386 prologue analyzer in GDB 6.2.1.
+
 2004-08-12  Andrew Cagney  <cagney@gnu.org>
 
 	* NEWS: Mention fixes in GDB 6.2.1.
