--- a/newlib/ChangeLog
+++ b/newlib/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-16  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* libc/stdio/vfscanf.c (_NO_LONGLONG): Move out of FLOATING_POINT
+	#if.
+
 2004-08-12  Jeff Johnston  <jjohnstn@redhat.com>
 
 	* libc/sys/linux/sys/types.h (u64): New typedef to allow building
