* fhandler_socket.cc (fhandler_socket::dup): Decrement dtable's 	need_fixup_before counter on successful dup. 	* net.cc (cygwin_getpeername): Add file descriptor to debug output.

--- a/winsup/cygwin/ChangeLog
+++ b/winsup/cygwin/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-19  Corinna Vinschen  <corinna@vinschen.de>
+
+	* fhandler_socket.cc (fhandler_socket::dup): Decrement dtable's
+	need_fixup_before counter on successful dup.
+	* net.cc (cygwin_getpeername): Add file descriptor to debug output.
+
 2004-08-17  Pierre Humblet <pierre.humblet@ieee.org>
 
 	* fhandler.h (fhandler_dev_dsp:~fhandler_dev_dsp): Delete.
