--- a/winsup/mingw/ChangeLog
+++ b/winsup/mingw/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-24  Steven G. Johnson  <stevenj@alum.mit.edu>
+
+	* mingwex/mingw-aligned-malloc.c: New file.
+	* mingwex/tst-aligned-malloc.c: New file.	
+
 2004-08-24  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* crt1.c: (__mingw_CRTStartup): Change return to void.  Add
